[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/options_page.gd" id="1_script"]

[node name="OptionsPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Game Options"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.321569, 0.321569, 1)
text = "Warning: These actions affect your save data permanently."
horizontal_alignment = 1

[node name="SaveBtn" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 1, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "SAVE GAME"

[node name="ResetBtn" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.8, 0.8, 1)
theme_override_colors/font_pressed_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "HARD RESET GAME"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Confirm Hard Reset"
initial_position = 2
size = Vector2i(400, 100)
ok_button_text = "Yes, Delete Everything"
dialog_text = "Are you sure you want to delete your save and restart?
This action cannot be undone."

[connection signal="pressed" from="CenterContainer/VBoxContainer/SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResetBtn" to="." method="_on_reset_btn_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
